sumo/tests/duarouter/trips/errors/vehicle_empty_arrivalspeed/errors.duarouter
Error: Attribute 'arrivalspeed' in definition of a tripdef is empty.
Error: Invalid arrivalspeed definition for vehicle ''
Quitting (on error).
